# CMakeList.txt: proyecto de CMake para AdventOfCode_5, incluya el origen y defina
# la lógica específica del proyecto aquí.
#
cmake_minimum_required (VERSION 3.8)

# Agregue un origen al ejecutable de este proyecto.
add_executable (AdventOfCode_5 "AdventOfCode_5.cpp" )

# TODO: Agregue pruebas y destinos de instalación si es necesario.
